--- a/contactMobile.html
+++ b/contactMobile.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/checkout.css">
-	 <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/checkout.css">
     <!--animates the tab menus-->
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
-	<title>Illesteva | Contact Us</title>
+	<title>Illesteva | Checkout</title>
 	</head>
 	<body>
 		
-		<!--borders-->
+<!--borders-->
 		<div class="leftBorder"></div>
 		<div class="rightBorder"></div>
 		<div class="bottomBorder"></div>
@@ -134,11 +134,12 @@
 				<li><a href="#">Collaborations</a></li>
                 <li><a href="mensStyle.html">Mens</a></li>
                 <li><a href="#">Womens</a></li>
-                <li><a href="#">Bags</a></li><br />
+                <li><span><a href="#">Bags</a></span></li>
                 <li><a href="#">Sign In</a></li>
                 <li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
+
 		
 		<!-----------CHECKOUT CONTENT--------------->
 		
@@ -180,27 +181,27 @@
 		<!-----------ABOUT END CONTENT--------------->
 		
 <!--FOOTER STARTS-->
-	<footer class="footer-ContactMobile">
-		<div class="row">
-			<nav class="nav">
-				<ul id="footer-menu">
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="about.html">About</a></li>
-								
-					<li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" id="icon"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="https://twitter.com/illesteva" target="_blank" id="icon"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="https://instagram.com/illesteva" target="_blank" id="icon"><i class="fa fa-instagram"></i></a></li>
-				</ul>
-				
-				<div id="footer-info" class="nav">
-					© 2015 Illesteva&nbsp;&nbsp;All rights reserved
-				</div>		
-			</nav>
-			
-		</div>
-	</footer>
+    <footer class="footer">
+        <div class="row">
+            <nav class="nav">
+                <ul id="footer-menu">
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About</a></li>
 
-	<!--FOOTER ENDS-->
+                    <li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" class="icon"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/illesteva" target="_blank" class="icon"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://instagram.com/illesteva" target="_blank" class="icon"><i class="fa fa-instagram"></i></a></li>
+                </ul>
+
+                <div id="footer-info" class="nav">
+                    © 2015 Illesteva&nbsp;&nbsp;All rights reserved
+                </div>
+            </nav>
+
+        </div>
+    </footer>
+
+    <!--FOOTER ENDS-->
 
 	<script src="js/jquery.js"></script>
     <script src="js/drop-downs.js"></script>
@@ -208,8 +209,7 @@
      <script src="js/fixedNav.js"></script>
 	 <script src="js/hamburger.js"></script>
 	<script src="js/animatedDD.js"></script>
-		<script src="http://maps.googleapis.com/maps/api/js"></script>
-	<script src="js/googleMap.js"></script>
+
 	</body>
 
 
