--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
-	<title>Illesteva | About</title>
+	<title>Illesteva | Made in Italy.</title>
 	</head>
 	<body>
 		
@@ -30,7 +30,7 @@
 				<a href="index.html"><img src="img/illestevaLogo.jpg" alt="illesteva logo"/></a>
 			</div>
 			<ul class="customerInfoContainer">
-				<li><a class="contact-bg dd-toggle">SIGN IN</a>
+				<li id="signInLink"><a class="contact-bg dd-toggle">SIGN IN</a>
 					<ul class="dd-hidden">
 
 					<li><div class="fieldset">
@@ -69,7 +69,7 @@
 					</ul>
 				</li>
 
-				<li><a class="contact-bg dd-toggle">CONTACT</a>
+				<li id="contactLink"><a class="contact-bg dd-toggle">CONTACT</a>
 			      	<ul class="dd-hidden">
 					<li><div class="fieldset">
 					    <h2 class="fs-title">Question/Comment?</h2>
@@ -122,7 +122,7 @@
 								<p class="tax">Plus 12%: $24</p>
 								<div class="total">Total:$224.00</div>
 
-						   		<div class="checkoutButton">Checkout</div>
+						   		<a href="checkout.html"><div class="checkoutButton">Checkout</div></a>
 						</div></li>
 
 					</ul>
@@ -130,9 +130,17 @@
 				</li>
 
 			</ul>
+			<ul class="mobileProductNav">
+				<li><a href="#">Collaborations</a></li>
+                <li><a href="mensStyle.html">Mens</a></li>
+                <li><a href="#">Womens</a></li>
+                <li><span><a href="#">Bags</a></span></li>
+                <li><a href="#">Sign In</a></li>
+                <li><a href="#">Contact</a></li>
+			</ul>
 		</nav>
 
-    <!-----------BLOG CONTENT--------------->
+    <!--BLOG CONTENT-->
 
     <div class="pageContainer">
         <div class="background">
@@ -142,7 +150,7 @@
                     <div class="section" id="s1">
                         <div class="content" id="c1">
                             <div class="blogPost">
-                                <!------a new post--------->
+                                <!--a new post-->
                                 <div class="individualPosts">
                                     <div class="blog-text-wrapper">
 										<p class="subhead">Proin faucibus porta nibh, quis vehicula nibh fermentum ut. Sed cursus nulla at magna vestibulum, vel porttitor lacus tristique. Aenean consectetur mi sed tristique interdum. Cras ac est vitae tellus pulvinar faucibus.</p>
@@ -170,7 +178,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!------a new post--------->
+                                <!--a new post-->
                                 <div class="individualPosts">
                                     <div class="blog-text-wrapper">
                                         <h1 class="blogTitle">Check out our Valentine’s Crushes </h1>
@@ -197,7 +205,7 @@
         </div>
     </div>
 
-    <!-----------BLOG END CONTENT--------------->
+    <!--BLOG END CONTENT-->
 
     <!--FOOTER STARTS-->
     <footer class="footer">
@@ -207,9 +215,9 @@
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
 
-                    <li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" id="icon"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://twitter.com/illesteva" target="_blank" id="icon"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://instagram.com/illesteva" target="_blank" id="icon"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" class="icon"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://twitter.com/illesteva" target="_blank" class="icon"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://instagram.com/illesteva" target="_blank" class="icon"><i class="fa fa-instagram"></i></a></li>
                 </ul>
 
                 <div id="footer-info" class="nav">
@@ -228,8 +236,7 @@
     <script src="js/fixedNav.js"></script>
     <script src="js/hamburger.js"></script>
     <script src="js/animatedDD.js"></script>
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
-    <script src="js/googleMap.js"></script>
+
 </body>
 
 
