--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
-	<title>Illesteva | Made in Italy.</title>
+	<title>Illesteva | About</title>
 	</head>
 	<body>
 		
