--- a/contactMobile.html
+++ b/contactMobile.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
-	<title>Illesteva | Checkout</title>
+	<title>Illesteva | Contact Us</title>
 	</head>
 	<body>
 		
