--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</div>
 			<ul class="customerInfoContainer">
 				<li id="signInLink"><a class="contact-bg dd-toggle">SIGN IN</a>
-					<ul class="dd-hidden">
+					<ul id="signInModal" class="dd-hidden">
 
 					<li><div class="fieldset">
 						<h2 class="fs-title">Already A Member?</h2>
@@ -69,7 +69,7 @@
 				</li>
 
 				<li id="contactLink"><a class="contact-bg dd-toggle">CONTACT</a>
-			      	<ul class="dd-hidden">
+			      	<ul id="contactModal" class="dd-hidden">
 					<li><div class="fieldset">
 					    <h2 class="fs-title">Question/Comment?</h2>
 					      <div class="inputwrapper"> 
@@ -96,9 +96,9 @@
 				</li>
 
 
-				<li>
+				<li id="shoppingBagLink">
 					<a class="fa fa-shopping-cart dd-toggle"></a>
-					<ul class="dd-hidden">
+					<ul id="shopBagModal" class="dd-hidden">
 						<li><div class="fieldset">
 						    <h2 class="fs-title">Your Cart</h2>
 								<div class="item">
@@ -135,7 +135,7 @@
                 <li><a href="#">Womens</a></li>
                 <li><a href="#">Bags</a></li><br />
                 <li><a href="#">Sign In</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contactMobile.html">Contact</a></li>
 			</ul>
 		</nav>
 		<!--Product Navigation-->
