--- a/leonardsMobile.html
+++ b/leonardsMobile.html
@@ -187,8 +187,9 @@
         <div id="modalBG">
             <div class="grid" id="productModal">
                     <div id="rightContent">
-                        <img id="storyBackground" src = "img/modal/mensLeonards1_2.jpg"alt="man with sunglasses">
                         <div class="closeBtn">X</div>
+                        <img id="storyBackground" class="modalDesktop" src = "img/modal/mensLeonards1_2.jpg"alt="man with sunglasses">
+                        <img id="storyBackground"class="modalMobile" src = "img/modal/mensLeonards1_2Mobile.png"alt="man with sunglasses">
                         <div id="glassStoryShots">
                             <div><img id="leonardsStory" src="img/modal/mensLeonards1_2.jpg" /></div>
                             <div><img id="leonardsTwoStory" src="img/modal/Leonards2.jpg" /></div>
@@ -220,6 +221,7 @@
                                 <div id="comments"><h4>View Comments</h4></div>
                             </div>
                             <div id="reviewSection">
+                                <span id="backIcon" class="reviewBack"><i class="fa fa-angle-left"></i></span>
                                 <div id="productPreviewText">
                                     <h2>LEONARDS</h2>
                                     <h3>$400.00</h3>
