--- a/mensStyle.html
+++ b/mensStyle.html
@@ -25,9 +25,11 @@
         <!--Top Navigation w/ Bag-->
         <nav id="customerInfoNav">
             <a id="nav-toggle" href="#"><span></span></a>
+            <a href="index.html">
             <div id="logo">
-                <a href="index.html"><img src="img/illestevaLogo.jpg" alt="illesteva logo"/></a>
+                <img src="img/illestevaLogo.jpg" alt="illesteva logo"/>
             </div>
+            </a>
             <div id="fixedGlassNav">
                 <div class="fixedGlassContainer"><img src="img/Leonard.jpg" /></div>
                 <div class="fixedGlassContainer"><img src="img/Milan.jpg" /></div>
@@ -140,7 +142,7 @@
                 <li><a href="#">Womens</a></li>
                 <li><a href="#">Bags</a></li><br />
                 <li><a href="#">Sign In</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contactMobile.html">Contact</a></li>
             </ul>
         </nav>
 
@@ -447,8 +449,8 @@
         <div class="row">
             <nav class="nav">
                 <ul id="footer-menu">
-                    <li id="footerBlog"><a href="#">Blog</a></li>
-                    <li id="footerAbout"><a href="#">About</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About</a></li>
                                 
                     <li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" id="icon"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://twitter.com/illesteva" target="_blank" id="icon"><i class="fa fa-twitter"></i></a></li>
