--- a/contactMobile.html
+++ b/contactMobile.html
@@ -7,16 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/checkout.css">
+	 <link rel="stylesheet" href="css/style.css">
     <!--animates the tab menus-->
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
-	<title>Illesteva | About</title>
+	<title>Illesteva | Contact Us</title>
 	</head>
 	<body>
-		
 		
 		<!--borders-->
 		<div class="leftBorder"></div>
@@ -137,56 +136,51 @@
                 <li><a href="#">Womens</a></li>
                 <li><a href="#">Bags</a></li><br />
                 <li><a href="#">Sign In</a></li>
-                <li><a href="contactMobile.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
-					<!-----------ABOUT CONTENT--------------->
+		
+		<!-----------CHECKOUT CONTENT--------------->
 		
 		<div class="pageContainer">	<!--changed to class or else error-->
 		<div class="background">
-		<div class="section-about">
-			<!--About Image on left-->
-				<div class="aboutImage">
-					<div class="about-image-wrapper">
-						<img class="about1" src="img/aboutBW.jpg" alt="black white square photo of a sunglasses on a table">
-						<img class="about2" src="img/aboutBW3.jpeg" alt=" slanted black and white photo.3 sunglasses displayed on a table.">
-					</div>   
-				</div>
-			<!--About Text on Right-->
-
-				<div class="aboutText"  id="aboutTextStuff">
-					<div class="about-text-wrapper">
-						<h1 class="aboutTitle">About Us</h1>
-						<div class="user-content">
-							<p>Founded in 2010, ILLESTEVA glasses are handmade in France and Italy, in concert with the world's leading manufactuers of luxury eyewear.</p>
-							<p class="AboutText">ILLESTEVA combines classic styles with contemporary Downtown New York City aesthetics, using materials like acetate and titanium with the design of each from.</p>
-							<p class="AboutText">ILLESTEVA has featured collaborative efforts with Jourdan Dunn, Lou Reed, Zac Posen, House of Waris, Band of Outsiders, and Dasha Zhukova. Most recently, ILLESTEVA has launched a line of hand-finished leather goods and umbrellas. ILLESTEVA backpacks and handbags are made with supple grained leather, combining natural, premium materials with urban functionality.</p>
-							<p class="AboutText">Celebrity fans include Beyonce, Rihanna, Lady Gaga, Katy Perry, Daniel Craig, Sienna Miller, Solange Knowles, Lena Dunham, Alexa Chung, Elton John, and Cara Delevingne.</p>
-						</div>   
-					</div>
-				</div>
+		<div class="container section-checkout">
 			
-				<!--About Text on Right-->
+			<div class="header"><h1>Contact Us</h1></div>
+			<!--1/3-->
+			<div class="col-4of12">
+				<div class="LogInSection">
+					<div class="fieldset2">
+						<h2 class="fs-title">Questions or Comments?</h2>
+						  <div class="inputwrapper"> 
+							<h5>Name</h5>
+							<input type="text" class="form" placeholder="Jane Doe">
+						  </div>
 
-				<div class="aboutText">
-					<div class="about-text-wrapper">
-						<h1 class="aboutTitle">Where To Find Us</h1>
-						<p>49 Prince St New York, NY USA</p>
-						<ul>
-							<li>M - F: 11am - 8pm </li>
-							<li>Sa: 11am - 7pm </li>
-							<li>Su: 11am - 6pm</li>
-						</ul>
-						<div id="googleMap"></div>
-					</div>
-				</div>
-			</div>
+						  <div class="inputwrapper">
+							<h5>Subject</h5>
+							<input type="text" class="form" placeholder="A title for your comment">
+						  </div>
+
+						  <div class="inputwrapper">
+							<h5>Comment</h5>
+							<textarea id="form-comment" placeholder="Please place comment here"></textarea>
+						  </div>
+
+						 <div class="submitButton">Submit</div>
+
+						<h3 class="bottomMessage">Or Call Us: 1-800-039-3939</h3>
+
+					</div><!--fieldset2-->
+				</div>	
+			</div> 
 		</div>
 		</div>
-		<!--ABOUT END CONTENT-->
+		</div>
+		<!-----------ABOUT END CONTENT--------------->
 		
 <!--FOOTER STARTS-->
-	<footer class="footer">
+	<footer class="footer-ContactMobile">
 		<div class="row">
 			<nav class="nav">
 				<ul id="footer-menu">
