--- a/contactMobile.html
+++ b/contactMobile.html
@@ -178,16 +178,16 @@
 		<!-----------ABOUT END CONTENT--------------->
 		
 <!--FOOTER STARTS-->
-	<footer class="footer">
+	<footer class="footer-ContactMobile">
 		<div class="row">
 			<nav class="nav">
 				<ul id="footer-menu">
 					<li><a href="blog.html">Blog</a></li>
 					<li><a href="about.html">About</a></li>
 								
-					<li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" class="icon"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="https://twitter.com/illesteva" target="_blank" class="icon"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="https://instagram.com/illesteva" target="_blank" class="icon"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" id="icon"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://twitter.com/illesteva" target="_blank" id="icon"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="https://instagram.com/illesteva" target="_blank" id="icon"><i class="fa fa-instagram"></i></a></li>
 				</ul>
 				
 				<div id="footer-info" class="nav">
