remerged and fixed conflicts

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
+    <link rel="stylesheet" href="css/footerStyle.css">
 	<title>Illesteva | Made in Italy.</title>
 	</head>
 	<body>
@@ -138,7 +139,7 @@
                 <li><a href="contactMobile.html">Contact</a></li>
 			</ul>
 		</nav>
-		
+
 		<div class="pageContainer">
 		<div class="background">
 		<div class="section-about">
