--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
+    <link rel="stylesheet" href="css/footerStyle.css">
 	<title>Illesteva | Made in Italy.</title>
 	</head>
 	<body>
