--- a/mensStyle.html
+++ b/mensStyle.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mensProductList.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
+    <link rel="stylesheet" href="css/footerStyle.css">
 
 	<title>Illesteva | Mens Style.</title>
 	</head>
