--- a/mensStyle.html
+++ b/mensStyle.html
@@ -32,9 +32,9 @@
             </div>
             </a>
             <div id="fixedGlassNav">
-                <div class="fixedGlassContainer"><img src="img/Leonard.jpg" /></div>
-                <div class="fixedGlassContainer"><img src="img/Milan.jpg" /></div>
-                <div class="fixedGlassContainer"><img src="img/Rectangles.jpg" /></div>
+                <div class="fixedGlassContainer" id="fixedLeonards"><img src="img/Leonard.jpg" /></div>
+                <div class="fixedGlassContainer" id="fixedMilan"><img src="img/Milan.jpg" /></div>
+                <div class="fixedGlassContainer" id="fixedWavers"><img src="img/Rectangles.jpg" /></div>
             </div>
             <ul class="customerInfoContainer">
                 <li id="signInLink"><a class="contact-bg dd-toggle">SIGN IN</a>
@@ -255,9 +255,9 @@
                     </div>
                 </div>
             </section>
-            <section id="milansSection" style="width:100%;height:100%">
+            <section style="width:100%;height:100%">
                 <div class="row">
-                    <div class="col-4of12" id="leonards">
+                    <div class="col-4of12" id="milansSection">
                         <img src="img/glassListing/milanClassic.jpg" />
                         <h3>Milan | Classic</h3>
                         <h4>$900.00</h4>
@@ -301,9 +301,9 @@
                     </a>
                 </div>
             </section>
-            <section id="waversSection" style="width:100%;height:100%">
+            <section style="width:100%;height:100%">
                 <div class="row">
-                    <div class="col-4of12" id="leonards">
+                    <div class="col-4of12" id="waversSection">
                         <img src="img/glassListing/waversClassic.jpg" />
                         <h3>Wavers | Classic</h3>
                         <h4>$170.00</h4>
