fixed footer for desktop and mobile. fixed contact mobile page

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
-    <link rel="stylesheet" href="css/footerStyle.css">
+     <!--<link rel="stylesheet" href="css/footerStyle.css">-->
 	<title>Illesteva | Made in Italy.</title>
 	</head>
 	<body>
@@ -133,7 +133,7 @@
 				<li><a href="#">Collaborations</a></li>
                 <li><a href="mensStyle.html">Mens</a></li>
                 <li><a href="#">Womens</a></li>
-                <li><a href="#">Bags</a></li><br />
+                <li><span><a href="#">Bags</a></span></li>
                 <li><a href="#">Sign In</a></li>
                 <li><a href="contactMobile.html">Contact</a></li>
 			</ul>
