--- a/checkout.html
+++ b/checkout.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
-	<title>Illesteva | Checkout</title>
+    <!--<link rel="stylesheet" href="css/footerStyle.css">-->
+	<title>Illesteva | Made in Italy.</title>
 	</head>
 	<body>
+
 
 		<!--borders-->
 <!--borders-->
@@ -133,7 +135,7 @@
 				<li><a href="#">Collaborations</a></li>
                 <li><a href="mensStyle.html">Mens</a></li>
                 <li><a href="#">Womens</a></li>
-                <li><a href="#">Bags</a></li><br />
+                <li><span><a href="#">Bags</a></span></li>
                 <li><a href="#">Sign In</a></li>
                	<li><a href="contactMobile.html">Contact</a></li>
 			</ul>
