--- a/contactMobile.html
+++ b/contactMobile.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/checkout.css">
+	<link rel="stylesheet" href="css/contactMobileStyle.css">
 	 <link rel="stylesheet" href="css/style.css">
     <!--animates the tab menus-->
     <link rel="stylesheet" href="css/animate.css">
@@ -132,13 +133,13 @@
 				<li><a href="#">Collaborations</a></li>
                 <li><a href="mensStyle.html">Mens</a></li>
                 <li><a href="#">Womens</a></li>
-                <li><a href="#">Bags</a></li><br />
+                <li><span><a href="#">Bags</a></span></li>
                 <li><a href="#">Sign In</a></li>
                 <li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 		
-		<!-----------CHECKOUT CONTENT--------------->
+		<!--CHECKOUT CONTENT-->
 		
 		<div class="pageContainer">	<!--changed to class or else error-->
 		<div class="background">
@@ -162,7 +163,7 @@
 
 						  <div class="inputwrapper">
 							<h5>Comment</h5>
-							<textarea id="form-comment" placeholder="Please place comment here"></textarea>
+							<textarea class="form-comment" placeholder="Please place comment here"></textarea>
 						  </div>
 
 						 <div class="submitButton">Submit</div>
@@ -175,19 +176,19 @@
 		</div>
 		</div>
 		</div>
-		<!-----------ABOUT END CONTENT--------------->
+		<!--ABOUT END CONTENT-->
 		
 <!--FOOTER STARTS-->
-	<footer class="footer-ContactMobile">
+	<footer class="footer">
 		<div class="row">
 			<nav class="nav">
 				<ul id="footer-menu">
 					<li><a href="blog.html">Blog</a></li>
 					<li><a href="about.html">About</a></li>
 								
-					<li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" id="icon"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="https://twitter.com/illesteva" target="_blank" id="icon"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="https://instagram.com/illesteva" target="_blank" id="icon"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" class="icon"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://twitter.com/illesteva" target="_blank" class="icon"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="https://instagram.com/illesteva" target="_blank" class="icon"><i class="fa fa-instagram"></i></a></li>
 				</ul>
 				
 				<div id="footer-info" class="nav">
@@ -198,7 +199,8 @@
 		</div>
 	</footer>
 
-	<!--FOOTER ENDS-->
+
+    <!--FOOTER ENDS-->
 
 	<script src="js/jquery.js"></script>
     <script src="js/drop-downs.js"></script>
