added mobile images and added CTA buttons

--- a/index.html
+++ b/index.html
@@ -152,12 +152,38 @@
 
 			<div class="pageContainer">	<!--changed to class or else error-->
 				<div class="background">
-					<img src="img/illestevaBackground.jpg" ="woman  wearing white dress and black and white striped sunglasses posing and looking down to the right" />
+					<img class="backgroundDesktop" src="img/illestevaBackground.jpg" ="woman  wearing white dress and black and white striped sunglasses posing and looking down to the right" />
+					<img class="backgroundMobile" src="img/illestevaBackgroundMobile.jpg" ="woman  wearing white dress and black and white striped sunglasses posing and looking down to the right" />
+					<div class="callToAction">
+						<div class="contentCallToAction">
+							<div id="ctaImg">
+								<img src="img/Rectangles.jpg" />
+							</div>
+							<div id="ctaText">
+								<h4>WAVERS</h4>
+								<h3>$500.00</h4>
+							</div>
+						</div>
+						<div class="ctaAddBtn">ADD TO BAG</div>
+					</div>
 				</div>
 			</div>
 			<div class="pageContainer">
 				<div class="background">
-					<img src="img/illestevaBG.jpg" alt="man looking to the left wearing gray blazer, black tunic and patterned sunglasses with green lense" />
+					<img class="backgroundDesktop" src="img/illestevaBG.jpg" alt="man looking to the left wearing gray blazer, black tunic and patterned sunglasses with green lense" />
+					<img class="backgroundMobile" src="img/illestevaBGMobile.jpg" alt="man looking to the left wearing gray blazer, black tunic and patterned sunglasses with green lense" />
+					<div class="callToAction">
+						<div class="contentCallToAction">
+							<div id="ctaImg">
+								<img src="img/Milan.jpg" />
+							</div>
+							<div id="ctaText">
+								<h4>MILAN</h4>
+								<h3>$300.00</h4>
+							</div>
+						</div>
+						<div class="ctaAddBtn">ADD TO BAG</div>
+					</div>
 				</div>
 			</div>
 
@@ -186,11 +212,12 @@
 	<!--FOOTER ENDS-->
 
 	<script src="js/jquery.js"></script>
-    <script src="js/drop-downs.js"></script>
-     <script src="js/productListingModal.js"></script>
-     <script src="js/fixedNav.js"></script>
-	 <script src="js/hamburger.js"></script>
+	<script src="js/drop-downs.js"></script>
+	<script src="js/productListingModal.js"></script>
+	<script src="js/fixedNav.js"></script>
+	<script src="js/hamburger.js"></script>
 	<script src="js/animatedDD.js"></script>
+	<script src="js/callToAction.js"></script>
 
 	</body>
 
