validation for my pages

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -28,13 +28,13 @@
             <a id="nav-toggle" href="#"><span></span></a>
             <a href="index.html">
             <div id="logo">
-                <img src="img/illestevaLogo.jpg" alt="illesteva logo"/>
+                <img src="img/illestevaLogo.jpg" alt="illesteva logo" />
             </div>
             </a>
             <div id="fixedGlassNav">
-                <div class="fixedGlassContainer" id="fixedLeonards"><img src="img/Leonard.jpg" /></div>
-                <div class="fixedGlassContainer" id="fixedMilan"><img src="img/Milan.jpg" /></div>
-                <div class="fixedGlassContainer" id="fixedWavers"><img src="img/Rectangles.jpg" /></div>
+                <div class="fixedGlassContainer" id="fixedLeonards"><img src="img/Leonard.jpg" alt="Circular Glasses classic Lenonards" /></div>
+                <div class="fixedGlassContainer" id="fixedMilan"><img src="img/Milan.jpg" alt="square shaped glasses Milans" /></div>
+                <div class="fixedGlassContainer" id="fixedWavers"><img src="img/Rectangles.jpg" alt="waver glasses strong rectangles" /></div>
             </div>
             <ul class="customerInfoContainer">
                 <li id="signInLink"><a class="contact-bg dd-toggle">SIGN IN</a>
@@ -139,7 +139,7 @@
                 <li><a href="#">Collaborations</a></li>
                 <li><a href="mensStyle.html">Mens</a></li>
                 <li><a href="#">Womens</a></li>
-                <li><a href="#">Bags</a></li><br />
+                <li class="break"><a href="#">Bags</a></li>
                 <li><a href="#">Sign In</a></li>
                 <li><a href="contactMobile.html">Contact</a></li>
             </ul>
@@ -150,7 +150,7 @@
             <div id="navContainer">
                 <ul>
                     <li><a href="#">Collaborations</a></li>
-                    <li><a href="#">Trending</a></li><br />
+                    <li class="break"><a href="#">Trending</a></li>
                     <li><a href="mensStyle.html">Mens</a></li>
                     <li><a href="#">Womens</a></li>
                     <li><a href="#">Umbrellas</a></li>
@@ -182,8 +182,8 @@
                             <h4>LEONARDS</h4>
                             <p>Versatile Style</p>
                         </div>
-                        <img class="leonardsDesktop" src="img/winterIllesteva.jpg" />
-                       <a href="leonardsMobile.html" target=new><img class="leonardsMobile" src="img/winterIllestevaMobile.jpg" /></a>
+                        <img class="leonardsDesktop" src="img/winterIllesteva.jpg" alt="Iconinc Man in Winter slopes with Illesteva" />
+                       <a href="leonardsMobile.html" target=new><img class="leonardsMobile" src="img/winterIllestevaMobile.jpg" alt="Iconinc Man in Winter slopes with Illesteva" /></a>
                     </div>
                     <div class="seeMoreBtn" id="leonardBtn"><h4>SEE MORE</h4></div>
                 </div>
@@ -193,8 +193,8 @@
                                 <h4>MILANS</h4>
                                 <p>High Style</p>
                             </div>
-                        <img class="milanDekstop" src="img/casualIllesteva.jpg" />
-                        <a href="leonardsMobile.html"><img class="milanMobile" src="img/casualIllestevaMobile.jpg" /><a/>
+                        <img class="milanDekstop" src="img/casualIllesteva.jpg" alt="Iconinc Man sitting on bench with Illesteva" />
+                        <a href="leonardsMobile.html"><img class="milanMobile" alt="Iconinc Man sitting on bench with Illesteva" src="img/casualIllestevaMobile.jpg" /></a>
                     </div>
                         <div class="seeMoreBtn" id="milanBtn"><h4>SEE MORE</h4></div>
                 </div>
@@ -204,8 +204,8 @@
                                 <h4>WAVERS</h4>
                                 <p>Casual Style</p>
                             </div>
-                       <img class="waversDesktop" src="img/boardingillesteva.jpg" />
-                       <a href="leonardsMobile.html"><img class="waversMobile" src="img/boardingillestevaMobile.jpg" /></a>
+                       <img class="waversDesktop" src="img/boardingillesteva.jpg" alt="Iconinc Man sitting on mountain With Illesteva" />
+                       <a href="leonardsMobile.html"><img class="waversMobile" alt="Iconinc Man sitting on mountain with Illesteva" src="img/boardingillestevaMobile.jpg" /></a>
                     </div>
                        <div class="seeMoreBtn" id="waversBtn"><h4>SEE MORE</h4></div>
                 </div>
@@ -216,20 +216,20 @@
             <section id="leonardsSection" style="width:100%;height:100%">
                 <div class="row">
                     <div class="col-4of12" id="leonards">
-                        <img src="img/Leonard.jpg" />
+                        <img src="img/Leonard.jpg" alt="Classic Leonards"  />
                         <h3>Leonard | Classic</h3>
                         <h4>$500.00</h4>
                     </div>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/LeonardsClearS.jpg" />
+                        <img src="img/glassListing/LeonardsClearS.jpg" alt="Leonards Clear" />
                         <h3>Leonards | Clear</h3>
                         <h4>$390.00</h4>
                     </div>
                     </a>
                      <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/LeonardsHalf.jpg" />
+                        <img src="img/glassListing/LeonardsHalf.jpg" alt="Leonards Half"  />
                         <h3>Leonards | Half</h3>
                         <h4>$150.00</h4>
                     </div>
@@ -238,18 +238,18 @@
                 <div class="row">
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/LeonardsPolarized.jpg" />
+                        <img src="img/glassListing/LeonardsPolarized.jpg" alt="Leonards Polarized"  />
                         <h3>Leonards | Polar</h3>
                         <h4>$200.00</h4>
                     </div>
                     </a>
                     <div class="col-4of12">
-                        <img src="img/glassListing/leonardsRound.jpg" />
+                        <img src="img/glassListing/leonardsRound.jpg" alt="Leonards round"  />
                         <h3>Leonards | Round</h3>
                         <h4>$500.00</h4>
                     </div>
-                    <div class="col-4of12" id="leonards">
-                        <img src="img/glassListing/leonardsToohey.jpg" />
+                    <div class="col-4of12">
+                        <img src="img/glassListing/leonardsToohey.jpg" alt="Leonards Tohey"  />
                         <h3>Leonards | Tohey</h3>
                         <h4>$890.00</h4>
                     </div>
@@ -258,20 +258,20 @@
             <section style="width:100%;height:100%">
                 <div class="row">
                     <div class="col-4of12" id="milansSection">
-                        <img src="img/glassListing/milanClassic.jpg" />
+                        <img src="img/glassListing/milanClassic.jpg" alt="Milan Classic"  />
                         <h3>Milan | Classic</h3>
                         <h4>$900.00</h4>
                     </div>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/milanCapri.jpg" />
+                        <img src="img/glassListing/milanCapri.jpg" alt="Milan Capri"  />
                         <h3>Milan | Capri</h3>
                         <h4>$390.00</h4>
                     </div>
                     </a>
                      <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/milanLine.jpg" />
+                        <img src="img/glassListing/milanLine.jpg" alt="Milan Line"  />
                         <h3>Milan | Line</h3>
                         <h4>$290.00</h4>
                     </div>
@@ -280,21 +280,21 @@
                 <div class="row">
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/milanMatte.jpg" />
+                        <img src="img/glassListing/milanMatte.jpg" alt="Milan Matte" />
                         <h3>Milan | Matte</h3>
                         <h4>$170.00</h4>
                     </div>
                     </a>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/milanShape.jpg" />
+                        <img src="img/glassListing/milanShape.jpg" alt="Milan Shape" />
                         <h3>Milan | Shape</h3>
                         <h4>$70.00</h4>
                     </div>
                     </a>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/milanSolid.jpg" />
+                        <img src="img/glassListing/milanSolid.jpg" alt="Milan Solid" />
                         <h3>Milan | Solid</h3>
                         <h4>$530.00</h4>
                     </div>
@@ -304,20 +304,20 @@
             <section style="width:100%;height:100%">
                 <div class="row">
                     <div class="col-4of12" id="waversSection">
-                        <img src="img/glassListing/waversClassic.jpg" />
+                        <img src="img/glassListing/waversClassic.jpg" alt="Wavers Classic" />
                         <h3>Wavers | Classic</h3>
                         <h4>$170.00</h4>
                     </div>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/waversClear.jpg" />
+                        <img src="img/glassListing/waversClear.jpg" alt="Wavers Clear" />
                         <h3>Wavers | Clear</h3>
                         <h4>$690.00</h4>
                     </div>
                     </a>
                      <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/waversDior.jpg" />
+                        <img src="img/glassListing/waversDior.jpg" alt="Wavers Dior" />
                         <h3>Wavers | Dior</h3>
                         <h4>$990.00</h4>
                     </div>
@@ -326,21 +326,21 @@
                 <div class="row">
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/waversDior2.jpg" />
+                        <img src="img/glassListing/waversDior2.jpg" alt="Wavers Style" />
                         <h3>Wavers | Style</h3>
                         <h4>$270.00</h4>
                     </div>
                     </a>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/waversLine.jpg" />
+                        <img src="img/glassListing/waversLine.jpg" alt="Wavers Line" />
                         <h3>Wavers | Line</h3>
                         <h4>$470.00</h4>
                     </div>
                     </a>
                     <a href="">
                     <div class="col-4of12">
-                        <img src="img/glassListing/waversPrada.jpg" />
+                        <img src="img/glassListing/waversPrada.jpg" alt="Wavers Prada" />
                         <h3>Wavers | Solid</h3>
                         <h4>$550.00</h4>
                     </div>
@@ -353,12 +353,12 @@
         <div id="modalBG">
             <div class="grid" id="productModal">
                     <div id="rightContent">
-                        <img id="storyBackground" src = "img/modal/mensLeonards1_2.jpg"alt="man with sunglasses">
+                        <img class="storyBackground" src = "img/modal/mensLeonards1_2.jpg" alt="man with sunglasses">
                         <div class="closeBtn">X</div>
                         <div id="glassStoryShots">
-                            <div><img id="leonardsStory" src="img/modal/mensLeonards1_2.jpg" /></div>
-                            <div><img id="leonardsTwoStory" src="img/modal/Leonards2.jpg" /></div>
-                            <div><img id="leonardsThreeStory" src="img/modal/mensLeonards3.jpg" /></div>
+                            <div><img id="leonardsStory" src="img/modal/mensLeonards1_2.jpg" alt="model with Illesteva Leopards" /></div>
+                            <div><img id="leonardsTwoStory" src="img/modal/Leonards2.jpg" alt="model with Illesteva Clear" /></div>
+                            <div><img id="leonardsThreeStory" src="img/modal/mensLeonards3.jpg" alt="model with Illesteva Polarized" /></div>
                              
                         </div>
                     </div>
@@ -368,10 +368,10 @@
                         <div class="onTop">
                             <div class="eyeGlassContainer">
                                 <div id="blueGlasses">
-                                <img src= "img/modal/Leonard.png"alt="golden frame sunglasses">
+                                <img src= "img/modal/Leonard.png" alt="golden frame sunglasses">
                                 </div>
                                 <div id="clearGlasses">
-                                <img src= "img/modal/clearLeonards.png"alt="Clear Leonards">
+                                <img src= "img/modal/clearLeonards.png" alt="Clear Leonards">
                                 </div>
                                 <div id="swatchesContainer">
                                     <div id="blue"></div>
@@ -382,29 +382,29 @@
                                     <h3>$175.00</h3>
                                     <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                                 </div>
-                                <div id="addBtn"><h3>ADD TO BAG</h3></div>
+                                <div class="addBtn"><h3>ADD TO BAG</h3></div>
                             </div>
                             <div id="reviewSection">
                                 <div id="productPreviewText">
                                     <h2>LEONARDS</h2>
                                     <h3>$400.00</h3>
-                                    <div id="rating">
+                                    <div class="rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star-o"></i>
                                     </div>
-                                    <div id="addBtn"><h3>ADD TO BAG</h3></div>
+                                    <div class="addBtn"><h3>ADD TO BAG</h3></div>
                                 </div>
                                 <div id="userContainer">
                                     <div class="userProfiles">
-                                        <img src="img/uiFaces/kathleen.jpg" style="border-radius:50%;" />
+                                        <img src="img/uiFaces/kathleen.jpg" style="border-radius:50%;" alt="picture of a girl white complexion" />
                                      </div>
                                      <div>
                                         <h5 class="userProfileText">JUDY GOSLING</h5>
                                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
-                                        <div id="rating" class="userProfileText">
+                                        <div class="rating userProfileText">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -413,12 +413,12 @@
                                         </div>
                                     </div>
                                      <div class="userProfiles">
-                                        <img src="img/uiFaces/jasmine.jpg" style="border-radius:50%;" />
+                                        <img src="img/uiFaces/jasmine.jpg" style="border-radius:50%;" alt="picture of a girl brown complexion" />
                                      </div>
                                      <div>
                                         <h5 class="userProfileText">SONYA LEVINE</h5>
                                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
-                                        <div id="rating" class="userProfileText">
+                                        <div class="rating userProfileText">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -430,7 +430,7 @@
                                 <div id="writeReviewSection">
                                     <form>
                                         <textarea placeholder="Write a review..."></textarea>
-                                        <input type="submit"></sumbit>
+                                        <input type="submit" />
                                     </form>
                                 </div>
                             </div>
