added favicon to all pages

--- a/leonardsMobile.html
+++ b/leonardsMobile.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mensProductList.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
+    <link rel="icon" href="img/favicon.ico" type="image/icon">
      <link rel="stylesheet" href="css/leonardMobileStyle.css">
 
 	<title>Illesteva | Mens Style.</title>
