--- a/contactMobile.html
+++ b/contactMobile.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
+    <link rel="icon" href="img/favicon.ico" type="image/icon">
 	<title>Illesteva | Contact Us</title>
 	</head>
 	<body>
