--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/hamburger.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
     <link rel="stylesheet" href="css/footerStyle.css">
+    <link rel="icon" href="img/favicon.ico" type="image/icon">
 	<title>Illesteva | Made in Italy.</title>
 	</head>
 	<body>
