--- a/mensStyle.html
+++ b/mensStyle.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/mensProductList.css">
     <link rel="stylesheet" href="css/mobileStyle.css">
     <link rel="stylesheet" href="css/footerStyle.css">
+    <link rel="icon" href="img/favicon.ico" type="image/icon">
 
 	<title>Illesteva | Mens Style.</title>
 	</head>
